k8s/yamls/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fractal-tree-deployment
  namespace: fractal-tree
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fractal-tree
  template:
    metadata:
      labels:
        app: fractal-tree
    spec:
      containers:
      - name: fractal-tree
        image: lereverandnox/fractal-tree
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 2
          timeoutSeconds: 2
        ports:
        - containerPort: 3000
          protocol: TCP
          name: ft-http
      restartPolicy: Always
