k8s/yamls/05-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fractal-tree-deployment
  namespace: fractal-tree
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: fractal-tree
    spec:
      volumes:
      - name: fractal-tree-src-pvs
        persistentVolumeClaim:
          claimName: fractal-tree-src-pvc
      containers:
      - name: fractal-tree
        image: lereverandnox/bower
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 2
          timeoutSeconds: 2
        ports:
        - containerPort: 8000
          protocol: TCP
          name: ft-http
        volumeMounts:
        - mountPath: "/home/bower/workspace"
          name: fractal-tree-src-pvs
      restartPolicy: Always
