k8s/yamls/06-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fractal-tree-service
  namespace: fractal-tree
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: fractal-tree
