k8s/yamls/04-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fractal-tree-ingress
  namespace: fractal-tree
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: fractal-tree.rodolphe-laidet.com
    http:
      paths:
      - backend:
          serviceName: fractal-tree-service
          servicePort: 3000
        path: /
  tls:
  - hosts:
    - fractal-tree.rodolphe-laidet.com
    secretName: fractal-tree-rodolphe-laidet-com-tls
